--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "joyce-portfolio",
+  "homepage": "https://joycepestin16.github.io/joyce-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
