--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-to-top": "^1.0.8",
+    "scroll-to-top": "^1.1.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
